package com.mrathena.design.pattern.creational.patterns.simple.factory.pattern.implement;

/**
 * @author mrathena on 2020/1/8 14:20
 */
public class ConcreteProductB extends AbstractProduct {
}
