@startuml

abstract class AbstractProduct
class ConcreteProductA extends AbstractProduct
class ConcreteProductB extends AbstractProduct
class Factory {
    + AbstractProduct getProduct(String productName)
    + AbstractProduct getProductByClassName(String productClassName)
}
Factory ..> Product
Factory ..> ConcreteProductA
Factory ..> ConcreteProductB

@enduml